--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,9 +34,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha05'
 
     implementation 'com.google.android.material:material:1.1.0-alpha05'
-    implementation 'com.airbnb.android:lottie:3.0.1'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
-    implementation 'com.google.android.gms:play-services-maps:16.1.0'
+
+    implementation 'org.osmdroid:osmdroid-android:6.1.0'
 
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
